[FIX] mail : o_followers_follow_button, text alignment

--- a/addons/mail/static/src/less/followers.less
+++ b/addons/mail/static/src/less/followers.less
@@ -44,7 +44,7 @@
 
         .o_followers_follow_button {
             width: 85px;
-            text-align: right;
+            text-align: center;
             padding-right: 0;
             color: @text-color;
             font-size: @o-followers-font-small;
